feature(QUINDLE-005) Add UnitTest
- Test Unitarios